--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav ul li {
 }
 
 .main {
-    background-image: url('./images/building.webp');
+    background-image: url('./building.webp');
     background-size: cover;
     position: relative;
     
